cmake_minimum_required(VERSION 3.17)
project(Tema1_poo)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tema1_poo
        main.cpp
        Autobuz.cpp
        Autobuz.h
        Sofer.cpp
        Sofer.h
        Companie.cpp
        Companie.h
        Masina.cpp
        Masina.h
        Bicicleta.cpp
        Bicicleta.h
        Vehicul.h
        Vehicul.cpp
        Exceptii.h)
